--- a/saju-backend/package.json
+++ b/saju-backend/package.json
@@ -17,13 +17,26 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "@nestjs/typeorm": "^8.0.3",
     "mysql2": "^2.3.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
+    "cross-env": "^7.0.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "bcryptjs": "^2.4.3",
+    "moment": "^2.29.1",
+    "typeorm": "^0.3.11",
+    "nestjs-rate-limiter": "^3.1.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "pm2": "^5.2.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -46,7 +59,9 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.7.4",
+    "webpack": "^5.69.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
