--- a/saju-backend/package.json
+++ b/saju-backend/package.json
@@ -1,83 +1,85 @@
 {
-  "name": "saju-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
-  },
-  "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/typeorm": "^8.0.3",
-    "mysql2": "^2.3.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "reflect-metadata": "^0.1.13",
-    "cross-env": "^7.0.3",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "bcryptjs": "^2.4.3",
-    "moment": "^2.29.1",
-    "typeorm": "^0.3.11",
-    "nestjs-rate-limiter": "^3.1.0",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "pm2": "^5.2.0",
-    "swagger-ui-express": "^4.4.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "~4.7.4",
-    "webpack": "^5.69.1",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+   "name": "saju-backend",
+   "version": "0.0.1",
+   "description": "",
+   "author": "",
+   "private": true,
+   "license": "UNLICENSED",
+   "scripts": {
+      "build": "nest build",
+      "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+      "start": "ts-node src/index.ts",
+      "start:dev": "nest start --watch",
+      "start:debug": "nest start --debug --watch",
+      "start:prod": "node dist/main",
+      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "@nestjs/common": "^9.0.0",
+      "@nestjs/core": "^9.0.0",
+      "@nestjs/jwt": "^9.0.0",
+      "@nestjs/passport": "^8.2.1",
+      "@nestjs/platform-express": "^9.0.0",
+      "@nestjs/swagger": "^6.1.4",
+      "@nestjs/typeorm": "^8.0.3",
+      "mysql2": "^2.3.3",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.13.2",
+      "reflect-metadata": "^0.1.13",
+      "cross-env": "^7.0.3",
+      "rimraf": "^3.0.2",
+      "rxjs": "^7.2.0",
+      "bcryptjs": "^2.4.3",
+      "moment": "^2.29.1",
+      "typeorm": "0.3.11",
+      "nestjs-rate-limiter": "^3.1.0",
+      "passport": "^0.5.2",
+      "passport-jwt": "^4.0.0",
+      "pm2": "^5.2.0",
+      "swagger-ui-express": "^4.4.0",
+      "pg": "^8.4.0"
+   },
+   "devDependencies": {
+      "@nestjs/cli": "^9.0.0",
+      "@nestjs/schematics": "^9.0.0",
+      "@nestjs/testing": "^9.0.0",
+      "@types/express": "^4.17.13",
+      "@types/jest": "28.1.8",
+      "@types/node": "^16.11.10",
+      "@types/supertest": "^2.0.11",
+      "@typescript-eslint/eslint-plugin": "^5.0.0",
+      "@typescript-eslint/parser": "^5.0.0",
+      "eslint": "^8.0.1",
+      "eslint-config-prettier": "^8.3.0",
+      "eslint-plugin-prettier": "^4.0.0",
+      "jest": "28.1.3",
+      "prettier": "^2.3.2",
+      "source-map-support": "^0.5.20",
+      "supertest": "^6.1.3",
+      "ts-jest": "28.0.8",
+      "ts-loader": "^9.2.3",
+      "ts-node": "10.7.0",
+      "tsconfig-paths": "4.1.0",
+      "typescript": "4.5.2",
+      "webpack": "^5.69.1",
+      "webpack-node-externals": "^3.0.0"
+   },
+   "jest": {
+      "moduleFileExtensions": [
+         "js",
+         "json",
+         "ts"
+      ],
+      "rootDir": "src",
+      "testRegex": ".*\\.spec\\.ts$",
+      "transform": {
+         "^.+\\.(t|j)s$": "ts-jest"
+      },
+      "collectCoverageFrom": [
+         "**/*.(t|j)s"
+      ],
+      "coverageDirectory": "../coverage",
+      "testEnvironment": "node"
+   }
 }
